[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/room_0/background/main.png" type="Texture" id=1]
[ext_resource path="res://scenes/rooms/Room_0/UV/Room_0_UV.gd" type="Script" id=2]
[ext_resource path="res://sprites/lighting/light.png" type="Texture" id=3]
[ext_resource path="res://sprites/room_0/objects/paper_sticked.png" type="Texture" id=4]
[ext_resource path="res://scenes/rooms/Room_0/UV/StickedPaper.gd" type="Script" id=5]
[ext_resource path="res://sounds/items/uv_flashlight.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/rooms/Room_0/UV/UVFlashlight.gd" type="Script" id=7]
[ext_resource path="res://objects/Interactive/MoveButton/MoveTo.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/room_0/objects/paper_sticked_uv.png" type="Texture" id=9]
[ext_resource path="res://scenes/rooms/Room_0/UV/PencilHandler.gd" type="Script" id=10]
[ext_resource path="res://sprites/room_0/objects/pencil.png" type="Texture" id=11]
[ext_resource path="res://objects/Fonts/MessageBoxFonts.tres" type="DynamicFont" id=12]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=3]
render_priority = 1
light_mode = 2

[node name="Room_0_UV" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
RoomName = "ROOM_0"
RoomPart = "UV"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StickedPaper" type="TextureButton" parent="."]
material = SubResource( 2 )
anchor_left = 0.518
anchor_top = 0.222
anchor_right = 0.625
anchor_bottom = 0.412
margin_left = 0.440002
margin_top = 0.239975
margin_right = 819.0
margin_bottom = 819.04
rect_scale = Vector2( 0.2, 0.2 )
mouse_default_cursor_shape = 16
texture_normal = ExtResource( 9 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UVFlashlight" type="Light2D" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 3 )
energy = 0.0
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="UVFlashlight"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="UVFlashlight"]
stream = ExtResource( 6 )
volume_db = 15.0

[node name="NoFlashligthTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MoveTo3" parent="." instance=ExtResource( 8 )]
margin_left = 100.67
margin_top = 357.335
margin_right = 155.67
margin_bottom = 423.335
location_name = "ROOM_0"
location_part = "MAIN"
sound = "res://sounds/enviroment/light_switch_on_off.wav"

[node name="CloseLetter" type="Button" parent="."]
visible = false
anchor_left = 0.758
anchor_top = 0.5
anchor_right = 0.758
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -20.0
margin_right = 6.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 12 )
text = "Убрать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key_paper" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="paper_sticked_uv" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="PencilHandler" type="TextureButton" parent="."]
visible = false
anchor_left = 0.361
anchor_top = 0.197
anchor_right = 0.64
anchor_bottom = 0.821
margin_left = 0.252502
margin_top = -0.00265503
margin_right = 0.57251
margin_bottom = 4.07727
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pencil" type="Sprite" parent="."]
visible = false
position = Vector2( 1474.83, 535.247 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="StickedPaper" to="." method="_on_StickedPaper_pressed"]
[connection signal="timeout" from="NoFlashligthTimer" to="." method="_on_NoFlashligthTimer_timeout"]
[connection signal="pressed" from="MoveTo3" to="." method="_on_MoveTo3_pressed"]
[connection signal="pressed" from="CloseLetter" to="." method="_on_CloseLetter_pressed"]
[connection signal="drop_correct" from="PencilHandler" to="." method="_on_PencilHandler_drop_correct"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
